<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.tcc.tcc.AlunoHomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:gravity="center"
            android:hint="@string/bem_vindo"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/colorButtonLetra"
            android:textColorHint="@color/colorButton"
            android:textSize="30sp" />

    </LinearLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">


        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorButtonNormal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="23"
                        android:src="@android:drawable/ic_menu_set_as" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="23"
                        android:src="@android:drawable/ic_menu_edit" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="23"
                        android:src="@android:drawable/ic_menu_sort_by_size" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="23"
                        android:src="@android:drawable/ic_menu_my_calendar" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">


                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="15"
                        android:gravity="center_horizontal"
                        android:text="@string/adm_btn_avaliacao"
                        android:textColor="@color/colorButton" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:gravity="center_horizontal"
                        android:text="@string/adm_btn_notas"
                        android:textColor="@color/colorButton" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="25"
                        android:gravity="center_horizontal"
                        android:text="@string/adm_btn_curso"
                        android:textColor="@color/colorButton" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="25"
                        android:gravity="center_horizontal"
                        android:text="@string/adm_btn_aluno"
                        android:textColor="@color/colorButton" />
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>
