<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.tcc.tcc.AlunoHomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:hint="@string/bem_vindo"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/colorButtonLetra"
            android:textColorHint="@color/colorButton"
            android:textSize="30sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="356dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0.08"
            android:paddingRight="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageViewComputacao"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.60"
                    app:srcCompat="@mipmap/letra_c" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="10dp">

                    <TextView
                        android:id="@+id/textViewComputacao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Ciência da Computação"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewDataComputacao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="07/2018" />
                </LinearLayout>

                <Button
                    android:id="@+id/buttonComputacao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:enabled="false"
                    android:text="Emitir Boletim"
                    android:textColor="@color/colorButtonLetra"
                    android:textSize="10sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/imageViewMatematica"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.60"
                    app:srcCompat="@mipmap/letra_c" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="10dp">

                    <TextView
                        android:id="@+id/textViewMatematica"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Ciência da Matemática"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewDataMatematica"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="08/2018" />
                </LinearLayout>

                <Button
                    android:id="@+id/buttonMatematica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@color/colorButton"
                    android:text="Emitir Boletim"
                    android:textColor="@color/colorButtonLetra"
                    android:textSize="10sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/imageViewSeresVivos"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.60"
                    app:srcCompat="@mipmap/letra_c" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="10dp">

                    <TextView
                        android:id="@+id/textViewSeresVivos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Ciência dos Seres Vivos"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewDataSeresVivos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="02/2019" />
                </LinearLayout>

                <Button
                    android:id="@+id/buttonSeresVivos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@color/colorButton"
                    android:text="Matricular"
                    android:textColor="@color/colorButtonLetra"
                    android:textSize="10sp" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">


        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolBar"
            android:background="@color/colorToolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="23"
                        android:src="@android:drawable/ic_menu_search" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="23"
                        android:src="@android:drawable/ic_menu_slideshow" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="23"
                        android:src="@android:drawable/ic_menu_agenda" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="23"
                        android:src="@android:drawable/ic_menu_my_calendar" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">


                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:gravity="center_horizontal"
                        android:text="@string/aluno_btn_pesquisar"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="15"
                        android:text="@string/aluno_btn_meus_cursos"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="25"
                        android:text="@string/aluno_btn_meus_matricula"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="22"
                        android:text="@string/aluno_btn_meus_conta"
                        android:textColor="@android:color/darker_gray" />
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>
